<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('login_attempts', function (Blueprint $table) {
            $table->id();
            $table->foreignId('user_id')->nullable()->constrained('users');
            $table->string('email');
            $table->string('ip_address');
            $table->text('user_agent')->nullable();
            $table->enum('resultado', ['exitoso', 'fallido']);
            $table->string('motivo_fallo')->nullable();
            $table->string('pais')->nullable();
            $table->string('ciudad')->nullable();
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('login_attempts');
    }
};
